[package]
name = "mtg-drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.9.2", features = ["serde"] }
tokio = { version = "1.17.0", features = ["full"] }
rand = "0.8.5"
pretty_env_logger = "0.4.0"
uuid = "0.8.2"
time = "0.3.9"
futures = "0.3.21"
serde_json = "1.0.81"
serde = "1.0.137"
kiss3d = "0.34.0"
nalgebra = "0.30"
strum = "0.24.0"
strum_macros = "0.24.0"